Fix FFM Issues